Atualizar o index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
                 <!-- <div class="message--self">Hello, World!</div>
 
                 <div class="message--other">
-                    <span class="message--sender">Manual do Dev</span>
+                    <span class="message--sender">Carlos Vítor</span>
                     Olá, Mundo!
                 </div> -->
             </section>
